[package]
name = "enum_str"
version = "0.1.3-alpha.0"
authors = ["lambdasqd <lambdasqd@gmail.com>"]
description = "Creates a unitary enum and conversions from enum variants to string and vice versa"
documentation = "https://docs.rs/enum_str/"
license = "MIT/Apache-2.0"
repository = "https://github.com/lambdasqd/enum_str-rs"
keywords = ["enum", "macro", "string"]
readme = "README.md"
include = ["Cargo.toml", "src/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]
travis-ci = { repository = "lambdasqd/enum_str-rs" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"